--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,43 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-    <h1>Welcome</h1>
+    <table class="table table-success table-striped">
+      <thead class="table-dark">
+        <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Name</th>
+            <th scope="col">Date</th>
+            <th scope="col">Email</th>
+            <th scope="col">address</th>
+            <th scope="col">city</th>
+            <th scope="col">state</th>
+            <th scope="col">country</th>
+            <th scope="col">phone</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% if records %}
+        {% for record in records %}
+            <tr>
+                <td> <a href="./record/{{ record.id }}">{{ record.id }} </a></td>
+                <td>  {{ record.name }} </td>
+                <td>{{ record.recorded_at }}</td>
+                <td>{{ record.email }}</td>
+                <td>{{ record.address }}</td>
+                <td>{{ record.city }}</td>
+                <td>{{ record.state }}</td>
+                <td>{{ record.country }}</td>
+                <td>{{ record.phone }}</td>
+            </tr>
+        {% endfor %}
+    {% endif %}
+
+
+      </tbody>
+    </table>
+
+
+
 {% else %}    
     <div class="col-md-6 offset-md-3">
     <h1>Login </h1>
