--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,15 +9,24 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Login</a>
-        </li>
+          {% if user.is_authenticated %}
           <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'logout' %}">Logout</a>
-        </li>
+                 <a class="nav-link active" aria-current="page" href="{% url 'logout' %}">Logout</a>
+          </li>
           <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'register' %}">Register</a>
-        </li>
+                 <a class="nav-link active" aria-current="page" href="{% url 'add_record' %}">Add Record</a>
+          </li>    
+              {% else %}
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Login</a>
+              </li>
+          
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{% url 'register' %}">Register</a>
+          </li>
+              
+          {% endif %}
+      
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Contact
