--- a/templates/record.html
+++ b/templates/record.html
@@ -32,4 +32,7 @@
     <a href={% url 'home' %} class="btn btn-secondary"> Back </a>
     
     <a href={% url 'delete_record' record.id %} class="btn btn-danger"> Delete </a>
+    
+    <a href={% url 'update_record' record.id %} class="btn btn-secondary"> Update </a>
+    
 {% endblock %}
