--- a/templates/add_record.html
+++ b/templates/add_record.html
@@ -4,7 +4,7 @@
 <div class="col-md-6 offset-md-3">
     <h1>Add records </h1>
         <br/>
-<form method="POST" action={% url 'add_record' %}>
+<form method="POST" > 
     {% csrf_token %}
 
     {{ form.as_p }}
